Добавление настроек упрощения полилинии и разрешения пересечений

--- a/Networks/App.config
+++ b/Networks/App.config
@@ -28,6 +28,12 @@
             <setting name="PowerCableLayerName" serializeAs="String">
                 <value>Кабели низкого напряжения</value>
             </setting>
+            <setting name="SimplifyPolyline" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="AllowIntersection" serializeAs="String">
+                <value>False</value>
+            </setting>
         </Networks.Properties.Settings>
     </userSettings>
 </configuration>
