Дополнение типов сетей и строений

--- a/Networks/App.config
+++ b/Networks/App.config
@@ -34,6 +34,30 @@
             <setting name="AllowIntersection" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="GasPipeLayerName" serializeAs="String">
+                <value>Газопроводы</value>
+            </setting>
+            <setting name="BuildingsFoundationLayerName" serializeAs="String">
+                <value>Фундамент</value>
+            </setting>
+            <setting name="StreetSideStoneLayerName" serializeAs="String">
+                <value>Бортовой камень</value>
+            </setting>
+            <setting name="ExternalEdgeLayerName" serializeAs="String">
+                <value>Наружная бровка</value>
+            </setting>
+            <setting name="HvlSupportsFoundation1LayerName" serializeAs="String">
+                <value>Опора ВЛ до 1 кВ</value>
+            </setting>
+            <setting name="HvlSupportsFoundation35LayerName" serializeAs="String">
+                <value>Опора ВЛ от 1кВ до 35 кВ</value>
+            </setting>
+            <setting name="HvlSupportsFoundationOverLayerName" serializeAs="String">
+                <value>Опора ВЛ от 35кВ</value>
+            </setting>
+            <setting name="RedLineLayerName" serializeAs="String">
+                <value>Красные линии</value>
+            </setting>
         </Networks.Properties.Settings>
     </userSettings>
 </configuration>
