--- a/Networks/Networks.csproj
+++ b/Networks/Networks.csproj
@@ -71,6 +71,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ACADHelperTemp.cs" />
     <Compile Include="AutocadExtensions.cs" />
     <Compile Include="AutocadHelper.cs" />
     <Compile Include="ConfiguratorForm.cs">
