--- a/Networks/Networks.csproj
+++ b/Networks/Networks.csproj
@@ -88,6 +88,7 @@
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Main.cs" />
+    <Compile Include="Pair.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="ConfiguratorForm.resx">
       <DependentUpon>ConfiguratorForm.cs</DependentUpon>
