Работа со слоями в утилиту

--- a/Networks/Networks.csproj
+++ b/Networks/Networks.csproj
@@ -74,6 +74,7 @@
     <Compile Include="ACADHelperTemp.cs" />
     <Compile Include="AutocadExtensions.cs" />
     <Compile Include="AutocadHelper.cs" />
+    <Compile Include="AutocadUtilities.cs" />
     <Compile Include="ConfiguratorForm.cs">
       <SubType>Form</SubType>
     </Compile>
